force-app/main/default/objects/Business_Case__c/Business_Case__c.object-meta.xml
<CustomObject>
    <label>Investment Schedule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>