force-app/main/default/objects/Business_Case__c/fields/Actual_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Approval_Date__c</fullName>
    <label>Actual Approval Date</label>
    <type>Date</type>
</CustomField>