force-app/main/default/objects/Business_Case__c/fields/Actual_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Actual_Approver_Name__c</fullName>
    <label>Actual Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>