force-app/main/default/objects/Business_Case__c/fields/Actual_Approver_Signature__c.field-meta.xml
<CustomField>
    <fullName>Actual_Approver_Signature__c</fullName>
    <formula>IF (ISBLANK(Actual_Approver_Signature_URL__c), &quot;BLANK&quot;, IMAGE(Actual_Approver_Signature_URL__c, &quot;Signature&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Approver Signature</label>
    <type>Text</type>
</CustomField>