force-app/main/default/objects/Business_Case__c/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manager Delegation</fullName>
                <default>true</default>
                <label>Manager Delegation</label>
            </value>
            <value>
                <fullName>GM Delegation</fullName>
            </value>
            <value>
                <fullName>CEO Delegation</fullName>
            </value>
            <value>
                <fullName>Board Delegation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>