force-app/main/default/objects/Business_Case__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <formula>CASE(text(Approval_Type__c),
&quot;Manager Delegation&quot;,  Investment_Area__r.Investment_Area_Owner__r.FirstName + &apos; &apos;  + Investment_Area__r.Investment_Area_Owner__r.LastName,
&quot;GM Delegation&quot;, Strategic_Area__r.Owner:User.FirstName + &apos; &apos;  + Strategic_Area__r.Owner:User.LastName,
&quot;CEO Delegation&quot;,&quot;CEO&quot;,
&quot;Board Delegation&quot;,&quot;Board&quot;,
&quot;Error&quot;
)</formula>
    <label>Approver</label>
    <type>Text</type>
</CustomField>