force-app/main/default/objects/Business_Case__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Variation Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>