force-app/main/default/objects/Business_Case__c/fields/Conga_Workflow_Investment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Conga_Workflow_Investment_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conga Workflow Investment Schedule</label>
    <type>Checkbox</type>
</CustomField>