force-app/main/default/objects/Business_Case__c/fields/Date_Signed_By_External_Party__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed_By_External_Party__c</fullName>
    <description>Date the Investment Schedule was signed by the external party</description>
    <label>Date Signed</label>
    <type>Date</type>
</CustomField>