force-app/main/default/objects/Business_Case__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>General Notes about Investment Schedule.</description>
    <inlineHelpText>Paste a link to Board approval papers and other information to be considered when approving this Investment Schedule.</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>