force-app/main/default/objects/Business_Case__c/fields/Document_Link_1__c.field-meta.xml
<CustomField>
    <fullName>Document_Link_1__c</fullName>
    <label>Document Link 1</label>
    <type>Url</type>
</CustomField>