force-app/main/default/objects/Business_Case__c/fields/Document_Link_2__c.field-meta.xml
<CustomField>
    <fullName>Document_Link_2__c</fullName>
    <label>Document Link 2</label>
    <type>Url</type>
</CustomField>