force-app/main/default/objects/Business_Case__c/fields/DocumentLogo__c.field-meta.xml
<CustomField>
    <fullName>DocumentLogo__c</fullName>
    <description>Identifies the image that will be used on the Investment Schedule report (Sports NZ or HPSNZ logo)</description>
    <formula>IF(TEXT(Strategic_Area__r.Entity__c) = &quot;High Performance&quot;,  &quot;https://sportnzgroup--c.ap1.content.force.com/servlet/servlet.ImageServer?id=01590000008arNw&amp;oid=00D0T0000000qRi&amp;lastMod=1435119897000&quot;, &quot;https://sportnzgroup--c.ap1.content.force.com/servlet/servlet.ImageServer?id=01590000008arND&amp;oid=00D0T0000000qRi&amp;lastMod=1435119579000&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Logo</label>
    <type>Text</type>
</CustomField>