force-app/main/default/objects/Business_Case__c/fields/Executive_Summary_Template__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Summary Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Executive_Summary_Template__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Executive_Summary_Template__c</referenceTo>
    <relationshipLabel>Investment Schedules</relationshipLabel>
    <relationshipName>Investment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>