force-app/main/default/objects/Business_Case__c/fields/External_Signatory__c.field-meta.xml
<CustomField>
    <fullName>External_Signatory__c</fullName>
    <description>The name of the person who signed the Investment Schedule for the Party/Vendor</description>
    <label>External Signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>