force-app/main/default/objects/Business_Case__c/fields/Generate_Investment_Schedule_Report__c.field-meta.xml
<CustomField>
    <fullName>Generate_Investment_Schedule_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this checkbox triggers a workflow rule to send parameters to Conga to generate the Investment Schedule Document.</description>
    <label>Generate Investment Schedule Report</label>
    <type>Checkbox</type>
</CustomField>