force-app/main/default/objects/Business_Case__c/fields/Initial_Approver__c.field-meta.xml
<CustomField>
    <fullName>Initial_Approver__c</fullName>
    <label>Initial Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>