force-app/main/default/objects/Business_Case__c/fields/Investment_Area__c.field-meta.xml
<CustomField>
    <fullName>Investment_Area__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Investment Area</label>
    <referenceTo>Investment_Area__c</referenceTo>
    <relationshipName>Business_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>