force-app/main/default/objects/Business_Case__c/fields/Investment_Area_Available_Budget__c.field-meta.xml
<CustomField>
    <fullName>Investment_Area_Available_Budget__c</fullName>
    <formula>Investment_Area__r.Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>