force-app/main/default/objects/Business_Case__c/fields/Investment_Area_Available_Budget_Image__c.field-meta.xml
<CustomField>
    <fullName>Investment_Area_Available_Budget_Image__c</fullName>
    <formula>image(if(Total_Amount__c &gt;  Investment_Area_Available_Budget__c ,$Setup.Icons__c.Orange__c,$Setup.Icons__c.Green__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Area</label>
    <type>Text</type>
</CustomField>