force-app/main/default/objects/Business_Case__c/fields/Investment_Area_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Investment_Area_Owner_Id__c</fullName>
    <formula>Investment_Area__r.Investment_Area_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Area Owner Id</label>
    <type>Text</type>
</CustomField>