force-app/main/default/objects/Business_Case__c/fields/Investment_Area_Ownerid__c.field-meta.xml
<CustomField>
    <fullName>Investment_Area_Ownerid__c</fullName>
    <formula>Investment_Area__r.Investment_Area_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Area Owner</label>
    <type>Text</type>
</CustomField>