force-app/main/default/objects/Business_Case__c/fields/Investment_Schedule_ID__c.field-meta.xml
<CustomField>
    <fullName>Investment_Schedule_ID__c</fullName>
    <displayFormat>IS{000000}</displayFormat>
    <label>Investment Schedule ID</label>
    <type>AutoNumber</type>
</CustomField>