force-app/main/default/objects/Business_Case__c/fields/Investment_Schedule_T_Cs_Template__c.field-meta.xml
<CustomField>
    <fullName>Investment_Schedule_T_Cs_Template__c</fullName>
    <formula>IF(TEXT( T_Cs__c )=&quot;P2P 2015 T&amp;C&quot;, &quot;a0i90000006e1FU&quot;, 
(IF(TEXT( T_Cs__c )= &quot;BI 2015 T&amp;C&quot;, &quot;a0i90000006e1FP&quot;, 
&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Schedule T&amp;Cs Template</label>
    <type>Text</type>
</CustomField>