force-app/main/default/objects/Business_Case__c/fields/Old_Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>Old_Date_Signed__c</fullName>
    <label>Old Date Signed</label>
    <type>Date</type>
</CustomField>