force-app/main/default/objects/Business_Case__c/fields/Old_Document_Link_1__c.field-meta.xml
<CustomField>
    <fullName>Old_Document_Link_1__c</fullName>
    <label>Old Document Link 1</label>
    <type>Url</type>
</CustomField>