force-app/main/default/objects/Business_Case__c/fields/Old_Document_Link_2__c.field-meta.xml
<CustomField>
    <fullName>Old_Document_Link_2__c</fullName>
    <label>Old Document Link 2</label>
    <type>Url</type>
</CustomField>