force-app/main/default/objects/Business_Case__c/fields/Old_External_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Old_External_Signatory__c</fullName>
    <label>Old External Signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>