force-app/main/default/objects/Business_Case__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investment Schedules</relationshipLabel>
    <relationshipName>Investment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>