force-app/main/default/objects/Business_Case__c/fields/Parent_Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Business_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Business Case</label>
    <referenceTo>Business_Case__c</referenceTo>
    <relationshipName>Business_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>