force-app/main/default/objects/Business_Case__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <formula>IF(ISPICKVAL(Investment_Area__r.Strategic_Area__r.Entity__c,&quot;Sport NZ&quot;), $Setup.Conga__c.Investment_Schedule_Sport_NZ_Template__c , $Setup.Conga__c.Investment_Schedule_HP_Template__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Type</label>
    <type>Text</type>
</CustomField>