force-app/main/default/objects/Business_Case__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <description>IMAGE(&quot;/servlet/servlet.FileDownload?file=015N0000000HcfH&quot;,&quot;Signature&quot;)</description>
    <formula>IF (ISBLANK(Signature_URL__c), &quot;BLANK&quot;, IMAGE(Signature_URL__c, &quot;Signature&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature</label>
    <type>Text</type>
</CustomField>