force-app/main/default/objects/Business_Case__c/fields/Signature_URL__c.field-meta.xml
<CustomField>
    <fullName>Signature_URL__c</fullName>
    <description>Old field object now uses &quot;Actual Approver Signature URL&quot;</description>
    <formula>Case(Approver_Name__c, 
&quot;Geoff Barry&quot;, &quot;https://sportnzgroup.my.salesforce.com/servlet/servlet.FileDownload?file=0159000000C4vsg&quot;,
&quot;Julie Morrison&quot;, &quot;https://sportnzgroup.my.salesforce.com/servlet/servlet.FileDownload?file=0159000000C4vsW&quot;,
&quot;Bria Sargent&quot;, &quot;https://sportnzgroup.my.salesforce.com/servlet/servlet.FileDownload?file=0156F00000Jz5ss&quot;,
&quot;Rebecca Rolls&quot;, &quot;https://sportnzgroup.my.salesforce.com/servlet/servlet.FileDownload?file=0156F00000LbLCG&quot;,
&quot;Hamish Armstrong&quot;, &quot;https://sportnzgroup.my.salesforce.com/servlet/servlet.FileDownload?file=0156F00000Dewja&quot;,
&quot;Fran McEwen&quot;, &quot;https://sportnzgroup.my.salesforce.com/servlet/servlet.FileDownload?file=0156F00000EmYx2&quot;, 
&quot;Jennah Wootten&quot;, &quot;https://sportnzgroup.my.salesforce.com/servlet/servlet.FileDownload?file=0156F00000El6X8&quot;, 
&quot;Brent Thawley&quot;, &quot;https://sportnzgroup.my.salesforce.com/servlet/servlet.FileDownload?file=01590000009uNTO&quot;,
&quot;Peter Miskimmin&quot;, &quot;https://sportnzgroup.my.salesforce.com/servlet/servlet.FileDownload?file=0159000000C4vsl&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Old field object now uses &quot;Actual Approver Signature URL&quot;</inlineHelpText>
    <label>Signature URL</label>
    <type>Text</type>
</CustomField>