force-app/main/default/objects/Business_Case__c/fields/Strategic_Area__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Area__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Strategic Area</label>
    <referenceTo>Strategic_Area__c</referenceTo>
    <relationshipLabel>Investment Schedules</relationshipLabel>
    <relationshipName>Investment_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>