force-app/main/default/objects/Business_Case__c/fields/Strategic_Area_Available_Budget_Image__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Area_Available_Budget_Image__c</fullName>
    <formula>image(if(Total_Amount__c &gt; Strategic_Area_Available_Budget__c ,$Setup.Icons__c.Red__c,$Setup.Icons__c.Green__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategic Area</label>
    <type>Text</type>
</CustomField>