force-app/main/default/objects/Business_Case__c/fields/Strategic_Area_Owner__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Area_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Area Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>