force-app/main/default/objects/Business_Case__c/fields/Strategic_Area_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Area_Owner_Id__c</fullName>
    <formula>Investment_Area__r.Strategic_Area__r.OwnerId</formula>
    <label>Strategic Area Owner Id</label>
    <type>Text</type>
</CustomField>