force-app/main/default/objects/Business_Case__c/fields/Strategic_Entity__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Entity__c</fullName>
    <formula>TEXT( Strategic_Area__r.Entity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategic Entity</label>
    <type>Text</type>
</CustomField>