force-app/main/default/objects/Business_Case__c/fields/T_C_PDF__c.field-meta.xml
<CustomField>
    <fullName>T_C_PDF__c</fullName>
    <label>T&amp;C PDF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>