force-app/main/default/objects/Business_Case__c/fields/T_Cs__c.field-meta.xml
<CustomField>
    <fullName>T_Cs__c</fullName>
    <label>T&amp;Cs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BC 2015 T&amp;C</fullName>
            </value>
            <value>
                <fullName>Rural Travel Fund T&amp;C</fullName>
            </value>
            <value>
                <fullName>Short form T&amp;C</fullName>
            </value>
            <value>
                <fullName>Long form T&amp;C</fullName>
            </value>
            <value>
                <fullName>New T&amp;C&apos;s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>