force-app/main/default/objects/Business_Case__c/fields/Testing_Conga_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Testing_Conga_Workflow__c</fullName>
    <formula>HYPERLINK(&quot;https://workflow.congamerge.com?SessionId=&quot; + $Api.Session_ID + &quot;&amp;ServerURL=&quot; + $Api.Partner_Server_URL_290 + Investment_Schedule_Workflow__c, &quot;Test Conga Workflow via UI&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Testing Conga Workflow</label>
    <type>Text</type>
</CustomField>