force-app/main/default/objects/Business_Case__c/fields/Total_Addendums__c.field-meta.xml
<CustomField>
    <fullName>Total_Addendums__c</fullName>
    <label>Total Addendums</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>