force-app/main/default/objects/Business_Case__c/fields/Total_Amount_Parent_Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Parent_Business_Case__c</fullName>
    <formula>Parent_Business_Case__r.Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (Parent Business Case)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>