force-app/main/default/objects/Business_Case__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <description>Sum of payments (excluding cancelled) on all Initiatives in this Investment Schedule.</description>
    <inlineHelpText>Sum of payments (excluding cancelled) on all Initiatives in this Investment Schedule.</inlineHelpText>
    <label>Total Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>