force-app/main/default/objects/Business_Case__c/fields/Variation_Count__c.field-meta.xml
<CustomField>
    <fullName>Variation_Count__c</fullName>
    <inlineHelpText>This indicates the number of times the Investment Schedule has been Varied.</inlineHelpText>
    <label>Variation Count</label>
    <summaryForeignKey>Variation__c.Investment_Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>