force-app/main/default/objects/Business_Case__c/recordTypes/Investment_Schedule.recordType-meta.xml
<RecordType>
    <fullName>Investment_Schedule</fullName>
    <active>true</active>
    <label>Investment Schedule</label>
</RecordType>