force-app/main/default/objects/Business_Case__c/validationRules/Cannot_Edit_during_active_variation.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_during_active_variation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(Status__c,&apos;Being Varied&apos;),
   $Profile.Name = &apos;Kahiwi&apos;,
   OR(
      ISCHANGED(Organisation__c),
      ISCHANGED(Investment_Area__c)
    )
)</errorConditionFormula>
    <errorMessage>&quot;Woops! You cannot edit Investment Schedule when a variation is in progress.&quot;</errorMessage>
</ValidationRule>