force-app/main/default/objects/Business_Case__c/validationRules/Cannot_Signed_Contract_on_create.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Signed_Contract_on_create</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), NOT(ISPICKVAL( Status__c , &apos;Approved&apos;)), 
   OR(NOT(ISBLANK(Document_Link_1__c)) ,NOT(ISBLANK(Document_Link_2__c )),
NOT(ISBLANK(External_Signatory__c)),
NOT(ISBLANK(Date_Signed_By_External_Party__c ))))</errorConditionFormula>
    <errorMessage>The Contract Signed fields can only be recorded or edited when the Investment Schedule status is Approved.</errorMessage>
</ValidationRule>