force-app/main/default/objects/Business_Case__c/validationRules/DateSigned_field_cannot_be_a_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>DateSigned_field_cannot_be_a_future_date</fullName>
    <active>true</active>
    <errorConditionFormula>Date_Signed_By_External_Party__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date_Signed_By_External_Party__c</errorDisplayField>
    <errorMessage>Contract Date signed cannot be future date</errorMessage>
</ValidationRule>