force-app/main/default/objects/Business_Case__c/validationRules/Non_Admin_Cannot_Change_Name_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Admin_Cannot_Change_Name_Field</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(Name), $Profile.Name&lt;&gt;&apos;System Administrator&apos;)</errorConditionFormula>
    <errorMessage>Sorry you don&apos;t have privilege to change the name of investment schedules.</errorMessage>
</ValidationRule>