force-app/main/default/objects/Business_Case__c/validationRules/StrategicArea_closed_Investment_Schedule.validationRule-meta.xml
<ValidationRule>
    <fullName>StrategicArea_closed_Investment_Schedule</fullName>
    <active>true</active>
    <description>Can&apos;t create Investment schedule of closed strategic area.</description>
    <errorConditionFormula>IF(ISPICKVAL(Investment_Area__r.Strategic_Area__r.Status__c,&quot;Closed&quot;)&amp;&amp;  ISNEW(), true, false)</errorConditionFormula>
    <errorMessage>The associated Strategic Area is closed, so no new Investment schedules can be added.</errorMessage>
</ValidationRule>