force-app/main/default/objects/Business_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Amount__c</columns>
    <columns>Investment_Schedule_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Investment_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>