force-app/main/default/objects/Business_Case__c/listViews/Approved.listView-meta.xml
<ListView>
    <fullName>Approved</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Total_Amount__c</columns>
    <columns>Investment_Area__c</columns>
    <columns>Executive_Summary_Template__c</columns>
    <columns>Investment_Area_Owner__c</columns>
    <columns>Organisation__c</columns>
    <columns>Approver__c</columns>
    <columns>Commencement_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved but not signed</label>
</ListView>