force-app/main/default/objects/Business_Case__c/listViews/Business_Case_Approvals_CEO_Business_Case.listView-meta.xml
<ListView>
    <fullName>Business_Case_Approvals_CEO_Business_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Business Case Approvals (CEO)</label>
    <queue>Business_Case_Approvals_CEO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>